--- a/src/main/webapp/view/list.html
+++ b/src/main/webapp/view/list.html
@@ -11,6 +11,7 @@
     }
 </style>
 <body>
+<h1>Nguyễn Đồng Chính</h1>
 <!--<h1>Hello C1220G1! We will be the developers of the future! </h1>-->
 <!--<h1 th:utext="${name}"></h1>-->
 <a href="/create">Create Customer</a>
